--- a/env.example
+++ b/env.example
@@ -1,2 +1,5 @@
 DISCORD_TOKEN=
 UEX_API_TOKEN=
+DEFAULT_LOCALE=uk
+# 1 = send ephemeral (private) messages by default, 0 = public
+DEFAULT_EPHEMERAL=1
